# cosmic-ray

./: .bumpversion.cfg  .coveragerc  .dir-locals.el  .editorconfig  .gitignore  .landscape.yaml  .pylintrc  .readthedocs.yml  .travis.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.rst  LICENCE.txt  README.md  README.rst  cliff.toml  deploy_key.enc  mkdocs.yml  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  wip.org
.github/: dependabot.yaml
.github/workflows/: python-package.yml  release.yml  run-tests.yml
.ropeproject/: config.py
cosmic_ray/: __init__.py  app.py  celery.py  cli.py  cloning.py  config.py  core.py  counting.py  exit_codes.py  find_modules.py  importing.py  json_util.py  modules.py  mutating.py  operations.py  parsing.py  plugins.py  print_visitor.py  processing.py  progress.py  reporting.py  testing.py  timing.py  util.py  version.py  work_db.py  work_item.py  work_record.py  worker.py
cosmic_ray/commands/: __init__.py  execute.py  format.py  init.py  new_config.py  report.py
cosmic_ray/compat/: json.py
cosmic_ray/execution/: celery.py  execution_engine.py  local.py  local_git.py
cosmic_ray/interceptors/: spor.py
cosmic_ray/operators/: __init__.py  arithmetic_operator_deletion.py  binary_operator_replacement.py  boolean_replacer.py  break_continue.py  comparison_operator_replacement.py  exception_replacer.py  exception_swallow.py  keyword_replacer.py  number_replacer.py  operator.py  provider.py  relational_operator_replacement.py  remove_decorator.py  unary_operator_replacement.py  util.py  zero_iteration_loop.py
cosmic_ray/tasks/: celery.py  worker.py
cosmic_ray/test/: test_find_modules.py  test_finder.py  test_get_line_number.py  test_logger.py  test_operators.py  test_queue_manager.py  test_record.py  test_summarizer.py
cosmic_ray/testing/: nose_runner.py  pytest_runner.py  test_runner.py  unittest_runner.py
cosmic_ray/tools/: html.py  report.py  survival_rate.py
docs/: cloning.rst  commands.md  commands.rst  concepts.md  concepts.rst  conf.py  development.org  distributed.md  distributed.rst  examples.rst  implementation.md  implementation.rst  index.md  index.rst  installation.md  installation.rst  make.bat  mkdocs.yml  operators.md  operators.rst  quickstart.md  quickstart.rst  requirements.txt  rtd-requirements.txt  structure.graffle  testrunners.rst  tests.md  tests.rst  theory.md  theory.rst
docs/docs/: operators.md
docs/source/: cloning.rst  commands.rst  concepts.rst  conf.py  continuous_integration.rst  distributed.rst  filters.rst  index.rst  installation.rst  interceptors.rst  quickstart.rst  tests.rst  theory.rst
docs/sphinx/: Makefile  commands.rst  conf.py  index.rst
examples/adam/: adam.rst  cosmic-ray-bad_tests.conf  cosmic-ray-good_tests.conf
examples/bowling_game_score_calculator/: config.yml  score_calculator.py  test_score_calculator.py
examples/simple_math/: cosmic-ray-bad_tests.conf  cosmic-ray-good_tests.conf  simple_math.py  simple_math.rst  test_simple_math_bad.py  test_simple_math_good.py
experiments/: celery_notes.md  frontend.py  notes.md
experiments/mp_child_modules/: test.py
experiments/synthetic_module/: synthetic_module.py
experiments/test_loading/: mod.py  runner.py
mutato/: find_modules.py  importlib.py  mutato.py  print_visitor.py
mutato/test/: test_find_modules.py
scripts/: authoring-client.py  cosmic_ray_tooling.py  make_release_tag.py
src/cosmic_ray/: __init__.py  ast.py  cli.py  cloning.py  config.py  exceptions.py  modules.py  mutating.py  plugins.py  pragma.py  progress.py  testing.py  timing.py  util.py  version.py  work_db.py  work_item.py  worker.py
test/: path_utils.py  pytest.ini  test_command_line_processing.py  test_find_modules.py  test_get_line_number.py  test_operators.py  test_worker.py
test/e2e/: test_e2e.py
test/test_project/: .gitignore  adam.py  cosmic-ray.baseline_fail.conf  cosmic-ray.import.conf  cosmic-ray.init_order.conf  cosmic-ray.nose2.local.conf  cosmic-ray.nosetest.celery3.conf  cosmic-ray.pytest.celery3.conf  cosmic-ray.pytest.local.conf  cosmic-ray.unittest.celery3.conf  cosmic-ray.unittest.local.conf
test/unittests/: test_build_mutations.py  test_command_line_processing.py  test_config.py  test_find_modules.py  test_get_line_number.py  test_operators.py  test_record.py  test_setup.py  test_work_item.py  test_worker.py
test_project/: adam.py  cosmic-ray.baseline_fail.conf  cosmic-ray.conf  cosmic-ray.empty.conf  cosmic-ray.import.conf  cosmic-ray.nosetest.conf  cosmic-ray.nosetest.dist.conf  cosmic-ray.nosetest.local.conf  cosmic-ray.pytest.conf  cosmic-ray.pytest.dist.conf  cosmic-ray.pytest.local.conf  cosmic-ray.unittest.conf  cosmic-ray.unittest.dist.conf  cosmic-ray.unittest.local.conf  run_tests.sh
test_project/baseline_fail/: test_fail.py
test_project/eve/: eve.py
test_project/tests/: test_adam.py  test_eve.py
tests/: conftest.py  pytest.ini
tests/e2e/: test_e2e.py  test_fast.py  test_higher_order_mutations.py
tests/example_project/: cosmic-ray.baseline_fail.conf  cosmic-ray.empty.conf  cosmic-ray.import.conf  cosmic-ray.init_order.conf  cosmic-ray.pytest.celery4.conf  cosmic-ray.pytest.local.conf  cosmic-ray.unittest.celery4.conf  cosmic-ray.unittest.local.conf  cr.html
tests/fast_tests/: README.md  calculator.py  cr.conf  test_calculator.py
tests/test_suite/: conftest.py  pytest.ini
tests/tools/: conftest.py  test_filter_git.py  test_filter_lines.py  test_filter_operators.py  test_filter_pragma.py  test_html_report.py  test_http_workers.py  test_rate.py  test_report.py  test_xml.py
tests/unittests/: conftest.py  test_ast.py  test_cli_dump.py  test_command_line_processing.py  test_config.py  test_find_modules.py  test_higher_order_mutants.py  test_init_annotations.py  test_mutate_and_test.py  test_new_config.py  (+6 more)
tools/: inspector.py  release.py
(+175 files in other folders)
